--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -308,7 +308,7 @@ small {
 	padding-top: 10px;
 	padding-left: 10px;
 	padding-right: 10px;
-	padding-bottom: 100px;
+	padding-bottom: 0px;
 	text-align: center;
 }
 
@@ -381,83 +381,83 @@ small {
 }
 
 .wrapper {
-  position: fixed;
+  // position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  // transform: translate(-50%, -50%);
 }
 
-a {
-  background-color: lightblue;
-  padding-top: 1.5px;
-  padding-left: 10px;
-  padding-bottom: 1px;
-  border-radius: 23px;
-  text-align: left;
-  margin: auto;
-  box-shadow: 0.7px 5px #EDE9E9;
-  display: block;
-  width: 445px;
-  height: 90px;
-  line-height: 12px;
-  font-size: 18px;
-  font-family: sans-serif;
-  text-decoration: none;
-  color: #333;
-  letter-spacing: 2px;
-  position: relative;
-  transition: all .35s;
-}
+// a {
+//   background-color: lightblue;
+//   padding-top: 1.5px;
+//   padding-left: 10px;
+//   padding-bottom: 1px;
+//   border-radius: 23px;
+//   text-align: left;
+//   margin: auto;
+//   box-shadow: 0.7px 5px #EDE9E9;
+//   display: block;
+//   width: 445px;
+//   height: 90px;
+//   line-height: 12px;
+//   font-size: 18px;
+//   font-family: sans-serif;
+//   text-decoration: none;
+//   color: #333;
+//   letter-spacing: 2px;
+//   position: relative;
+//   transition: all .35s;
+// }
 
-a span {
-  position: relative;
-  z-index: 2;
-}
+// a span {
+//   position: relative;
+//   z-index: 2;
+// }
 
-a:after {
-  position: absolute;
-  content: "";
-  top: 0;
-  right: 0;
-  width: 0;
-  height: 90px;
-  background: #99E2D0;
-  transition: all .35s;
-  visibility: hidden;
-  padding-top: 1.5px;
-	padding-left: 10px;
-	padding-bottom: 1px;
-	border-radius: 0px 23px 23px 0px;;
-}
+// a:after {
+//   position: absolute;
+//   content: "";
+//   top: 0;
+//   right: 0;
+//   width: 0;
+//   height: 90px;
+//   background: #99E2D0;
+//   transition: all .35s;
+//   visibility: hidden;
+//   padding-top: 1.5px;
+// 	padding-left: 10px;
+// 	padding-bottom: 1px;
+// 	border-radius: 0px 23px 23px 0px;;
+// }
 
-a:hover:after {
-  width: 15%;
-  visibility: visible;
-}
-
-
-#check {
-  right: 5px;
-  top: 30px;
-  position: absolute;
-  display: none;
-  z-index: 3;
-  transition: right .35s;
-  color: white;
-  font-size: 35px;
-}
-
-a:hover #check {
-   animation:spin .35s linear;
-   display: block;
-}
+// a:hover:after {
+//   width: 15%;
+//   visibility: visible;
+// }
 
 
-@keyframes spin {
-  0% {
-    transform: translate(25px) rotate(0deg);
-  }
-  100% {
-    transform: translate(0px) rotate(360deg);
-  }
-}
+// #check {
+//   right: 5px;
+//   top: 30px;
+//   position: absolute;
+//   display: none;
+//   z-index: 3;
+//   transition: right .35s;
+//   color: white;
+//   font-size: 35px;
+// }
+
+// a:hover #check {
+//    animation:spin .35s linear;
+//    display: block;
+// }
+
+
+// @keyframes spin {
+//   0% {
+//     transform: translate(25px) rotate(0deg);
+//   }
+//   100% {
+//     transform: translate(0px) rotate(360deg);
+//   }
+// }
