--- a/css/mobile.css
+++ b/css/mobile.css
@@ -210,18 +210,11 @@ small {
   /*left: 420px;*/
   /*bottom: 38px;*/ }
 
-.heart-menu:hover {
-  background-image: -webkit-gradient(168deg, #FF79DA, #9356DC);
-  -webkit-background-clip: text; }
-
 .heart-menu:hover .far,
 .heart-menu .fa {
   display: none;
   background-image: -webkit-gradient(168deg, #FF79DA, #9356DC);
   -webkit-background-clip: text; }
-
-.heart-menu:hover .fa {
-  display: block; }
 
 .flex-container {
   display: flex;
@@ -232,6 +225,13 @@ small {
   top: 27px;
   left: 30px; }
 
+#heart-box {
+  position: relative;
+  right: 80px;
+  top: -5px;
+  margin: 0;
+  padding: 0; }
+
 .menu-page-image {
   padding-bottom: 3px;
   height: 300px;
@@ -241,9 +241,6 @@ small {
   /*text-align: center;*/ }
 
 .fa-heart {
-  position: relative; }
-
-.far fa-heart {
   position: relative; }
 
 .menu-container {
