--- a/css/mobile.css
+++ b/css/mobile.css
@@ -233,9 +233,10 @@ small {
   left: 30px; }
 
 .menu-page-image {
-  padding-bottom: 3px;
   height: 300px;
-  width: 467px; }
+  width: 474px;
+  top: 50px;
+  z-index: 1; }
 
 .restaurant-name {
   /*text-align: center;*/ }
@@ -246,13 +247,15 @@ small {
 .far fa-heart {
   position: relative; }
 
+#background {
+  position: absolute;
+  background-color: blue;
+  border-radius: 40px 40px 0px 0px;
+  z-index: 2; }
+
 .menu-container {
-  background-color: #F7F7F7;
-  position: relative;
-  top: -100px;
   font-family: Shrikhand;
   font-size: 15px;
-  border-radius: 40px 40px 0px 0px;
   padding-top: 10px;
   padding-left: 10px;
   padding-right: 10px;
@@ -261,7 +264,8 @@ small {
 
 .part {
   font-family: Lucida Bright;
-  position: relative; }
+  position: relative;
+  padding-top: 30px; }
 
 .underline {
   background-color: #99E2D0;
@@ -275,15 +279,8 @@ small {
 
 .food {
   opacity: 0;
-  font-family: Lucida Bright;
-  line-height: 12px;
-  padding-top: 1.5px;
-  padding-left: 10px;
-  padding-bottom: 1px;
-  border-radius: 23px;
   height: 90px;
   text-align: left;
-  box-shadow: 0.7px 5px #EDE9E9;
   margin: auto;
   margin-top: 17px;
   position: relative;
@@ -314,8 +311,8 @@ small {
   animation-delay: 4.5s; }
 
 #btn-container {
-  padding-top: 53px;
-  padding-bottom: 75px; }
+  padding-top: 100px;
+  padding-bottom: 25px; }
 
 #order-btn {
   font-size: 17.5px;
@@ -329,5 +326,67 @@ small {
   background-image: linear-gradient(168deg, #FF79DA, #9356DC);
   box-shadow: 5px 8px 5px 1px #EDE9E9; }
 
-#background {
-  background-color: #F7F7F7; }
+.anime {
+  background-color: white;
+  padding-top: 1.5px;
+  padding-left: 10px;
+  padding-bottom: 1px;
+  border-radius: 23px;
+  text-align: left;
+  margin: auto;
+  box-shadow: 0.7px 5px #EDE9E9;
+  display: block;
+  width: 445px;
+  height: 90px;
+  line-height: 12px;
+  font-size: 18px;
+  font-family: sans-serif;
+  text-decoration: none;
+  color: #333;
+  letter-spacing: 2px;
+  position: relative;
+  transition: all .35s; }
+
+.anime span {
+  position: relative;
+  z-index: 2;
+  font-family: Lucida Bright; }
+
+.anime:after {
+  position: absolute;
+  content: "";
+  top: 0;
+  right: 0;
+  width: 0;
+  height: 90px;
+  background: #99E2D0;
+  transition: all .35s;
+  visibility: hidden;
+  padding-top: 1.5px;
+  padding-left: 10px;
+  padding-bottom: 1px;
+  border-radius: 0px 23px 23px 0px; }
+
+.anime:hover:after {
+  width: 15%;
+  visibility: visible; }
+
+#check {
+  right: 5px;
+  top: 30px;
+  position: absolute;
+  display: none;
+  z-index: 3;
+  transition: right .35s;
+  color: white;
+  font-size: 35px; }
+
+.anime:hover #check {
+  animation: spin .35s linear;
+  display: block; }
+
+@keyframes spin {
+  0% {
+    transform: translate(25px) rotate(0deg); }
+  100% {
+    transform: translate(0px) rotate(360deg); } }
