--- a/scss/index.scss
+++ b/scss/index.scss
@@ -110,11 +110,11 @@ p {
 	 border-bottom: solid #99E2D0;
 }
 
-.food {
-	font-family: $font_family_1;
-	background-color: white;
-	padding-left: 5px;
-	border-radius: 40px;
-	text-align: left;
-	box-shadow: 0.7px 5px red;
-}
+// .food {
+// 	font-family: $font_family_1;
+// 	background-color: white;
+// 	padding-left: 5px;
+// 	border-radius: 40px;
+// 	text-align: left;
+// 	box-shadow: 0.7px 5px red;
+// }
