--- a/scss/index.scss
+++ b/scss/index.scss
@@ -23,15 +23,14 @@ header {
 	height: auto;
 	text-align: center;
 }
-footer {
-	background-color: $background_color_2;
-	border: medium;
-	color: $color_1;
-	font-family: $font_family_2;
-	padding: 85px;
-	line-height: 1.5;
-}
-
+// footer {
+// 	background-color: $background_color_2;
+// 	border: medium;
+// 	color: $color_1;
+// 	font-family: $font_family_2;
+// 	padding: 85px;
+// 	line-height: 1.5;
+// }
 a {
 	text-decoration: none;
 }
@@ -93,28 +92,9 @@ p {
 	text-indent: 30px;
 }
 
-.underline {
-	color: red !important;
-}
-
-.menu-container {
-	font-family: Shrikhand;
-	/*text-align: center;*/
-	border-radius: 40px 40px 0px 0px;
-}
-
 .section {
 	 font-family: $font_family_1;
 	 width: 45px;
 	 padding-bottom: 3px;
 	 border-bottom: solid #99E2D0;
 }
-
-// .food {
-// 	font-family: $font_family_1;
-// 	background-color: white;
-// 	padding-left: 5px;
-// 	border-radius: 40px;
-// 	text-align: left;
-// 	box-shadow: 0.7px 5px red;
-// }
