--- a/css/tablet.css
+++ b/css/tablet.css
@@ -5,12 +5,22 @@
 div {
   font-family: Roboto; }
 
+html {
+  background-color: #B1B1B1; }
+
+body {
+  max-width: 500px;
+  position: relative;
+  left: 150px; }
+
 .loading-container {
-  position: absolute;
+  position: center;
   opacity: 0;
   animation: mymove 1s;
   animation-fill-mode: forwards;
-  animation-delay: 2s; }
+  animation-delay: 2s;
+  background-color: white;
+  width: 474px; }
 
 @keyframes mymove {
   from {
@@ -51,6 +61,11 @@ div {
   text-align: center;
   padding: 10%; }
 
+#container-text {
+  position: center;
+  font: helvetica;
+  padding: 5%; }
+
 img {
   padding-top: 10px;
   padding-bottom: 10px; }
@@ -58,7 +73,9 @@ img {
 header {
   width: auto;
   height: auto;
-  text-align: center; }
+  text-align: center;
+  background-color: white;
+  width: 474px; }
 
 .location {
   font-family: Lucida Bright;
@@ -73,14 +90,17 @@ footer {
   color: white;
   font-family: Calibri;
   padding: 85px;
-  line-height: 1.5; }
+  line-height: 1.5;
+  text-align: center; }
 
 a {
   text-decoration: none; }
 
 strong {
   font-family: Arial;
-  font-size: 18px; }
+  font-size: 18px;
+  text-align: center;
+  padding-bottom: 20px; }
 
 i {
   padding-right: 14px; }
@@ -129,10 +149,11 @@ small {
   font-family: sans-serif;
   text-align: auto;
   display: block;
-  padding: 3%; }
+  padding: 3%;
+  background-color: white; }
 
 .btn-center {
-  width: 30%;
+  position: relative;
   display: grid;
   margin: 50px; }
 
@@ -141,7 +162,7 @@ small {
   background-color: #F7F7F7;
   font-size: 15px;
   text-align: left;
-  padding: 20px;
+  padding: 30px;
   border: none;
   display: center;
   width: 330px;
@@ -161,6 +182,10 @@ small {
   padding-top: 40px;
   padding-bottom: 60px; }
 
+#restaurant-text {
+  text-align: center;
+  padding: 5%; }
+
 .image-container {
   background-color: white;
   padding-top: 0%;
@@ -173,7 +198,7 @@ small {
   line-height: 0.2;
   box-shadow: 5px 8px 5px 1px #EDE9E9;
   font-family: Shrikhand;
-  border-radius: 40px 40px 0px 0px; }
+  border-radius: 40px 40px 25px 25px; }
 
 .menu-image {
   padding-top: 0%;
@@ -247,12 +272,6 @@ small {
 .fa-arrow-left {
   color: black; }
 
-.menu-page-image {
-  height: 300px;
-  width: 474px;
-  top: 50px;
-  position: relative; }
-
 .fa-heart {
   position: relative; }
 
@@ -267,11 +286,18 @@ small {
   padding: 0;
   color: #c7c3c8; }
 
+.menu-page-image {
+  height: 300px;
+  width: 474px;
+  top: 50px;
+  position: relative; }
+
 #background {
   background-color: #F7F7F7;
   position: absolute;
-  border-radius: 40px 40px 0px 0px;
-  z-index: 2; }
+  left: 13px;
+  width: 474px;
+  border-radius: 40px 40px 0px 0px; }
 
 .menu-container {
   font-size: 15px;
