--- a/scss/desktop.scss
+++ b/scss/desktop.scss
@@ -19,13 +19,25 @@ div {
   font-family: Roboto;
 }
 
+html {
+	background-color: #B1B1B1;
+}
+
+body {
+	max-width: 1000px;
+	position: relative;
+    left: 450px;
+}
 
 .loading-container {
-  position: absolute;
+  position: center;
   opacity:0;
   animation: mymove 1s;
   animation-fill-mode: forwards;
   animation-delay: 2s;
+  background-color: white;
+  width: 990px;
+  height: 400px;
 }
 
 @keyframes mymove {
@@ -70,6 +82,14 @@ div {
 	text-align: center;
 	padding: 10%;
 }
+
+#container-text {
+	position: center;
+	font: $font_family_4;
+	padding: 5%;
+}
+
+
 img {
 	padding-top: 10px;
 	padding-bottom: 10px;
@@ -78,6 +98,7 @@ header {
 	width: auto;
 	height: auto;
 	text-align: center;
+	background-color: white;
 }
 
 .location {
@@ -94,6 +115,7 @@ footer {
 	font-family: $font_family_2;
 	padding: 85px;
 	line-height: 1.5;
+	text-align: center;
 }
 
 a {
@@ -102,6 +124,8 @@ a {
 strong {
 	font-family: Arial;
 	font-size: 18px;
+	text-align: center;
+	padding-bottom: 20px;
 }
 i {
 	padding-right: 14px;
@@ -155,9 +179,12 @@ small {
 	text-align: auto;
 	display: block;
 	padding: 3%;
+	background-color: white;
 }
 
 .btn-center{
+	position: relative;
+	left: 250px;
 	width: 30%;
 	display: grid;
 	margin: 50px;
@@ -168,7 +195,7 @@ small {
 	background-color: #F7F7F7;
 	font-size: 15px;
 	text-align: left;
-	padding: 20px;
+	padding: 30px;
 	border: none;
 	display: center;
 	width: 330px;
@@ -191,6 +218,11 @@ small {
 	padding-bottom: 60px;
 }
 
+#restaurant-text {
+	text-align: center;
+	padding: 5%;
+}
+
 .image-container {
 	background-color: $color_1;
 	padding-top: 0%;
@@ -203,7 +235,7 @@ small {
 	line-height: 0.2;
 	box-shadow: 5px 8px 5px 1px #EDE9E9;
 	font-family: Shrikhand;
-	border-radius: 40px 40px 0px 0px;
+	border-radius: 40px 40px 25px 25px;
 }
 
 .menu-image {
@@ -249,8 +281,8 @@ small {
 /*----menu css----*/
 
 .restaurant-name {
-	text-align: left;
-	padding-left: 20px;
+	text-align: center;
+	padding-right:30px;
 	font-family: Shrikhand;
 }
 
@@ -298,13 +330,6 @@ small {
 	color: black;
 }
 
-.menu-page-image {
-	height: 300px;
-	width: 474px;
-	top: 50px;
-	position: relative;
-}
-
 .fa-heart {
   position: relative;
 
@@ -324,14 +349,24 @@ small {
   color: #c7c3c8;
 }
 
+.menu-page-image {
+	height: 300px;
+	width: 474px;
+	top: 100px;
+	left: 200px;
+	border-radius: 40px 40px 0px 0px
+}
+
 #background {
 	background-color: #F7F7F7;
 	position: absolute;
+	top: 350px;
 	border-radius: 40px 40px 0px 0px;
 	z-index: 2;
 }
 
 .menu-container {
+	width: 970px;
 	font-size: 15px;
 	padding-top: 10px;
 	padding-left: 10px;
@@ -343,6 +378,7 @@ small {
 .part {
 	 font-family: $font_family_1;
 	 position: relative;
+	 left: 450px;
 	 padding-top: 30px;
 }
 
@@ -351,7 +387,7 @@ small {
   position: relative;
   height: 4px;
   border: none;
-  width: 40px;
+  width: 65px;
   bottom: 7px;
   text-align: left;
   margin: 0px;
