--- a/css/mobile.css
+++ b/css/mobile.css
@@ -5,6 +5,9 @@
 div {
   font-family: Roboto; }
 
+body {
+  position: relative; }
+
 .loading-container {
   position: absolute;
   opacity: 0;
@@ -70,6 +73,7 @@ header {
 footer {
   background-color: #383B3D;
   border: medium;
+  height: full;
   color: white;
   font-family: Calibri;
   padding: 85px;
@@ -278,7 +282,6 @@ small {
   padding-top: 10px;
   padding-left: 10px;
   padding-right: 10px;
-  padding-bottom: 100px;
   text-align: center; }
 
 .part {
@@ -391,7 +394,7 @@ small {
   width: 15%;
   visibility: visible; }
 
-#check {
+.check {
   right: 5px;
   top: 30px;
   position: absolute;
@@ -401,7 +404,7 @@ small {
   color: white;
   font-size: 35px; }
 
-.anime:hover #check {
+.anime:hover .check {
   animation: spin .35s linear;
   display: block; }
 
