--- a/css/index.css
+++ b/css/index.css
@@ -26,6 +26,10 @@ i {
 p {
   font-family: helvetica; }
 
+body {
+  position: static;
+  margin: 0 auto; }
+
 #order {
   font-size: 17.5px;
   font-family: Calibri;
