--- a/css/tablet.css
+++ b/css/tablet.css
@@ -9,12 +9,13 @@ html {
   background-color: #B1B1B1; }
 
 body {
-  max-width: 500px;
-  position: relative;
-  left: 150px; }
+  position: absolute;
+  left: 10%;
+  right: 10%; }
 
 .loading-container {
-  position: center;
+  position: absolute;
+  left: 100px;
   opacity: 0;
   animation: mymove 1s;
   animation-fill-mode: forwards;
@@ -29,9 +30,7 @@ body {
     opacity: 1; } }
 
 #spinner {
-  position: relative;
-  left: 130px;
-  top: 200px; }
+  position: relative; }
 
 #hideMe {
   -moz-animation: cssAnimation 0s ease-in 2s forwards;
@@ -295,11 +294,11 @@ small {
 #background {
   background-color: #F7F7F7;
   position: absolute;
-  left: 13px;
   width: 474px;
   border-radius: 40px 40px 0px 0px; }
 
 .menu-container {
+  position: center;
   font-size: 15px;
   padding-top: 10px;
   padding-left: 10px;
@@ -416,7 +415,7 @@ small {
   width: 15%;
   visibility: visible; }
 
-#check {
+.check {
   right: 5px;
   top: 30px;
   position: absolute;
@@ -426,7 +425,7 @@ small {
   color: white;
   font-size: 35px; }
 
-.anime:hover #check {
+.anime:hover .check {
   animation: spin .35s linear;
   display: block; }
 
