--- a/scss/index.scss
+++ b/scss/index.scss
@@ -37,6 +37,12 @@ i {
 p {
 	font-family: $font_family_4;
 }
+
+body {
+	position: static;
+	margin: 0 auto;
+}
+
 #order {
 	font-size: 17.5px;
 	font-family: $font_family_2;
