--- a/css/desktop.css
+++ b/css/desktop.css
@@ -31,9 +31,11 @@ body {
 
 #spinner {
   position: relative;
-  top: 50%; }
+  top: 45%; }
 
 #hideMe {
+  position: relative;
+  left: 50%;
   -moz-animation: cssAnimation 0s ease-in 2s forwards;
   /* Firefox */
   -webkit-animation: cssAnimation 0s ease-in 2s forwards;
@@ -288,10 +290,10 @@ small {
   color: #c7c3c8; }
 
 .menu-page-image {
+  position: relative;
   height: 300px;
   width: 474px;
-  top: 100px;
-  left: 200px;
+  left: 250px;
   border-radius: 40px 40px 0px 0px; }
 
 #background {
