--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -20,10 +20,11 @@ div {
 }
 
 body {
-	margin: auto;
+	margin: 0 auto;
+	padding: 0;
 	position: relative;
-	left: 10%;
-	right: 3%;
+	// left: 10%;
+	// right: 3%;
 }
 
 
