--- a/css/mobile.css
+++ b/css/mobile.css
@@ -6,10 +6,9 @@ div {
   font-family: Roboto; }
 
 body {
-  margin: auto;
-  position: relative;
-  left: 10%;
-  right: 3%; }
+  margin: 0 auto;
+  padding: 0;
+  position: relative; }
 
 .loading-container {
   position: absolute;
