--- a/css/tablet.css
+++ b/css/tablet.css
@@ -9,13 +9,11 @@ html {
   background-color: #B1B1B1; }
 
 body {
-  position: absolute;
-  left: 10%;
-  right: 10%; }
+  display: flex;
+  align-items: center;
+  flex-direction: column; }
 
 .loading-container {
-  position: absolute;
-  left: 100px;
   opacity: 0;
   animation: mymove 1s;
   animation-fill-mode: forwards;
@@ -61,7 +59,6 @@ body {
   padding: 10%; }
 
 #container-text {
-  position: center;
   font: helvetica;
   padding: 5%; }
 
