--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -21,16 +21,13 @@ div {
 
 body {
 	margin: 0 auto;
-	padding: 0;
 	position: relative;
-	// left: 10%;
-	// right: 3%;
+	width: 100%;
 }
 
 
 .loading-container {
-  position: absolute;
-  opacity:0;
+  opacity: 0;
   animation: mymove 1s;
   animation-fill-mode: forwards;
   animation-delay: 2s;
