--- a/scss/tablet.scss
+++ b/scss/tablet.scss
@@ -24,14 +24,17 @@ html {
 }
 
 body {
-	position: absolute;
-    left: 10%;
-    right: 10%;
+	// position: absolute;
+ //    left: 10%;
+ //    right: 10%;
+ display: flex;
+ align-items: center;
+ flex-direction: column;
 }
 
 .loading-container {
-  position: absolute;
-  left: 100px;
+  // position: absolute;
+  // left: 100px;
   opacity:0;
   animation: mymove 1s;
   animation-fill-mode: forwards;
@@ -82,7 +85,7 @@ body {
 }
 
 #container-text {
-	position: center;
+	// position: center;
 	font: $font_family_4;
 	padding: 5%;
 }
