--- a/scss/tablet.scss
+++ b/scss/tablet.scss
@@ -24,17 +24,14 @@ html {
 }
 
 body {
-	// position: absolute;
- //    left: 10%;
- //    right: 10%;
- display: flex;
- align-items: center;
- flex-direction: column;
+	position: absolute;
+    left: 10%;
+    right: 10%;
 }
 
 .loading-container {
-  // position: absolute;
-  // left: 100px;
+  position: absolute;
+  left: 100px;
   opacity:0;
   animation: mymove 1s;
   animation-fill-mode: forwards;
@@ -85,7 +82,7 @@ body {
 }
 
 #container-text {
-	// position: center;
+	position: center;
 	font: $font_family_4;
 	padding: 5%;
 }
@@ -111,13 +108,21 @@ header {
 	padding-bottom: 20px;
 }
 footer {
-	background-color: $background_color_2;
-	border: medium;
-	color: $color_1;
-	font-family: $font_family_2;
-	padding: 85px;
-	line-height: 1.5;
-	text-align: center;
+  background-color: $background_color_2;
+  color: $color_1;
+  padding: 35px;
+  line-height: 1.5;
+}
+footer a {
+  color: $color_1;
+  text-decoration: none;
+  font-family: $font_family_2;
+  display: block;
+}
+.footer-icon {
+  color: $color_1;
+  display: inline-block;
+  width: 15px; 
 }
 
 a {
@@ -514,11 +519,4 @@ small {
 	bottom: 20px;
 	text-align: right;
 	padding-right: 40px;
-}
-
-.ds-price {
-	position: relative;
-	text-align: right;
-	right: 78px;
-	bottom: 50px;
 }
