--- a/css/tablet.css
+++ b/css/tablet.css
@@ -9,11 +9,13 @@ html {
   background-color: #B1B1B1; }
 
 body {
-  display: flex;
-  align-items: center;
-  flex-direction: column; }
+  position: absolute;
+  left: 10%;
+  right: 10%; }
 
 .loading-container {
+  position: absolute;
+  left: 100px;
   opacity: 0;
   animation: mymove 1s;
   animation-fill-mode: forwards;
@@ -59,6 +61,7 @@ body {
   padding: 10%; }
 
 #container-text {
+  position: center;
   font: helvetica;
   padding: 5%; }
 
@@ -82,12 +85,20 @@ header {
 
 footer {
   background-color: #383B3D;
-  border: medium;
   color: white;
+  padding: 35px;
+  line-height: 1.5; }
+
+footer a {
+  color: white;
+  text-decoration: none;
   font-family: Calibri;
-  padding: 85px;
-  line-height: 1.5;
-  text-align: center; }
+  display: block; }
+
+.footer-icon {
+  color: white;
+  display: inline-block;
+  width: 15px; }
 
 a {
   text-decoration: none; }
@@ -438,9 +449,3 @@ small {
   bottom: 20px;
   text-align: right;
   padding-right: 40px; }
-
-.ds-price {
-  position: relative;
-  text-align: right;
-  right: 78px;
-  bottom: 50px; }
