--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -75,6 +75,11 @@ body {
 	text-align: center;
 	padding: 10%;
 }
+
+#container-text {
+	padding: 5%;
+}
+
 img {
 	padding-top: 10px;
 	padding-bottom: 10px;
@@ -92,14 +97,23 @@ header {
 	padding-top: 20px;
 	padding-bottom: 20px;
 }
+
 footer {
-	background-color: $background_color_2;
-	border: medium;
-	height: full;
-	color: $color_1;
-	font-family: $font_family_2;
-	padding: 85px;
-	line-height: 1.5;
+  background-color: $background_color_2;
+  color: $color_1;
+  padding: 35px;
+  line-height: 1.5;
+}
+footer a {
+  color: $color_1;
+  text-decoration: none;
+  font-family: $font_family_2;
+  display: block;
+}
+.footer-icon {
+  color: $color_1;
+  display: inline-block;
+  width: 15px; 
 }
 
 a {
@@ -109,6 +123,19 @@ strong {
 	font-family: Arial;
 	font-size: 18px;
 }
+
+h1 {
+	font-size: 25px;
+}
+
+h2 {
+	font-family: Arial;
+}
+
+h3 {
+	font-family: $font_family_4;
+}
+
 i {
 	padding-right: 14px;
 }
@@ -116,7 +143,7 @@ p {
 	font-family: $font_family_4;
 	text-align: left;
 	letter-spacing: -1px;
-	line-height:10px;
+	line-height:-10px;
 }
 
 small {
@@ -199,7 +226,6 @@ small {
 
 .image-container {
 	background-color: $color_1;
-	padding-top: 0%;
 	padding-bottom: 75px;
 	border-radius: 20px;
 	width: 340px;
@@ -208,7 +234,7 @@ small {
 	margin-top: 30px;
 	line-height: 0.2;
 	box-shadow: 5px 8px 5px 1px #EDE9E9;
-	font-family: Shrikhand;
+	// font-family: Shrikhand;
 	border-radius: 40px 40px 25px 25px;
 }
 
@@ -416,7 +442,6 @@ small {
   display: block;
   width: 445px;
   height: 90px;
-  line-height:-10px;
   font-size: 18px;
   font-family: Arial;
   text-decoration: none;
@@ -469,7 +494,7 @@ small {
 .anime:hover .check {
    animation:spin .35s linear;
    display: block;
-}
+} 
 
 
 @keyframes spin {
@@ -483,15 +508,8 @@ small {
 
 .price {
 	position: relative;
-	right: 37px;
-	bottom: 20px;
+	right: 40px;
+	bottom: 40px;
 	text-align: right;
 	padding-right: 40px;
-}
-
-.ds-price {
-	position: relative;
-	text-align: right;
-	right: 78px;
-	bottom: 50px;
 }
