--- a/css/index.css
+++ b/css/index.css
@@ -16,12 +16,20 @@ header {
 a {
   text-decoration: none; }
 
+a:visited {
+  color: black;
+  background-color: transparent;
+  text-decoration: none; }
+
 strong {
   font-family: sans-serif;
   font-size: 23px; }
 
 i {
   padding-right: 14px; }
+
+h3 {
+  font-family: "Roboto"; }
 
 p {
   font-family: helvetica; }
