--- a/scss/desktop.scss
+++ b/scss/desktop.scss
@@ -244,7 +244,6 @@ small {
 	margin-top: 30px;
 	line-height: 0.2;
 	box-shadow: 5px 8px 5px 1px #EDE9E9;
-	font-family: Shrikhand;
 	border-radius: 40px 40px 25px 25px;
 }
 
@@ -286,6 +285,12 @@ small {
 .heart-home:hover .fa {
     display: block;
    }
+
+
+.restaurant-wrapper {
+	display: flex;
+	flex-wrap: wrap;
+}
 
 
 /*----menu css----*/
