btn group change

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -153,8 +153,7 @@ small {
 #btn-group {
   font-family: sans-serif;
   text-align: auto;
-  display: block;
-  padding: 3%; }
+  display: block; }
 
 .btn-center {
   width: 30%;
